Implemented logic for registering a new ItemPost
- Added ability to save a Item to the database

--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 	<name>BargainBee</name>
 	<description>BargainBee</description>
 	<modules>
-		<module>listing-service</module>
+		<module>itemlisting-service</module>
 	</modules>
 
 	<properties>
