--- a/itemlisting-service/src/main/resources/application.properties
+++ b/itemlisting-service/src/main/resources/application.properties
@@ -16,3 +16,6 @@ spring.jpa.hibernate.ddl-auto=update
 # Actuator
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
+
+# Eureka
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
