Added Api Gateway and Keycloak User Management

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 	<modules>
 		<module>itemlisting-service</module>
 		<module>discovery-server</module>
+		<module>api-gateway</module>
 	</modules>
 
 	<properties>
