--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -24,3 +24,5 @@ spring.cloud.gateway.routes[2].uri=http://localhost:8761
 spring.cloud.gateway.routes[2].predicates[0]=Path=/eureka/**
 
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8181/realms/spring-boot-microservices-realm
+
+management.endpoints.web.exposure.include=*
